# GovGap

dao_risk_detector/: .env.example  .gitignore  README.md  pyproject.toml
dao_risk_detector/data/: abi_targets.jsonl
dao_risk_detector/data/decoded_samples/: decoded-aave-0001.json  decoded-aave-0002.json  decoded-aave-0004.json  decoded-aave-0005.json  decoded-aave-0007.json  decoded-aave-0014.json  decoded-aave-0016.json  decoded-aave-0017.json  decoded-arbitrum-0004.json  decoded-arbitrum-0011.json  decoded-arbitrum-0012.json  decoded-arbitrum-0013.json  decoded-arbitrum-0015.json  decoded-arbitrum-0018.json  decoded-compound-0004.json  decoded-compound-0011.json  decoded-compound-0013.json  decoded-compound-0014.json  decoded-compound-0016.json  decoded-compound-0020.json  decoded-ens-0005.json  decoded-ens-0013.json  decoded-ens-0015.json  decoded-ens-0017.json  decoded-ens-0019.json  decoded-nouns-dao-0001.json  decoded-nouns-dao-0004.json  decoded-nouns-dao-0005.json  decoded-nouns-dao-0006.json  decoded-nouns-dao-0010.json  decoded-nouns-dao-0019.json  decoded-nouns-dao-0020.json  decoded-uniswap-0002.json  (+6 more)
dao_risk_detector/scripts/: analyze_unknown_selectors.py  build_all_final_json.py  build_final_json_sample.py  check_anvil.py  evaluate_against_labels.py  extract_all_semantics.py  extract_semantics_sample.py  fetch_missing_trace_abis.py  generate_all_reports.py  generate_markdown_report.py  reparse_existing_traces.py  rerun_problem_traces.py  simulate_all_samples.py  simulate_sample.py  summarize_final_outputs.py
dao_risk_detector/src/: __init__.py
(+1114 files in other folders)
