[project]
name = "dao-proposal-semantic-gap"
version = "0.1.0"
description = "DAO proposal Semantic Gap detection scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "web3>=6.0",
    "eth-abi>=5.0",
    "eth-utils>=4.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

